hphp/test/quick/dv_i0.php.expectf

Fatal error: Expected constant expression for initializer in %s/dv_i0.php on line 3
